immich/50-immich-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:release
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: ml-cache
              mountPath: /cache
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: ml-cache
          persistentVolumeClaim:
            claimName: immich-ml-cache
