immich/52-immich-cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml-cpu
  namespace: immich
spec:
  replicas: 3
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:release
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: ml-cache
              mountPath: /cache
              subPath: immich-ml-cache
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: ml-cache
          persistentVolumeClaim:
            claimName: immich-upload
