immich/60-immich-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
              subPath: library
            - name: photos
              mountPath: /photos
          readinessProbe:
            tcpSocket: { port: 2283 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket: { port: 2283 }
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
        - name: photos
          persistentVolumeClaim:
            claimName: immich-photos
