immich/61-immich-microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: immich
spec:
  replicas: 3
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: immich-microservices
          image: ghcr.io/immich-app/immich-server:v2.5.6
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
              subPath: library
            - name: photos
              mountPath: /photos
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
        - name: photos
          persistentVolumeClaim:
            claimName: immich-photos
