immich/25-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
