immich/16-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-nginx
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: immich-server
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rke2-ingress-nginx
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 2283
  policyTypes:
    - Ingress
