immich/17-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-immich-ml-from-server
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: immich-machine-learning
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: immich-server
      ports:
        - protocol: TCP
          port: 3003
  policyTypes:
    - Ingress
